# Grimm

./: .gitignore  CMakeLists.txt  GrimmMap.cpp  GrimmMap.h  README.md  main.cpp
fairytales/: 1.1.txt  1.2.txt  1.3.txt  1.4.txt  1.5.txt  2.1.txt  2.2.txt  2.3.txt  2.4.txt  2.5.txt  2.6.txt  2.7.txt  3.1.txt  3.2.txt  3.3.txt  3.4.txt  3.5.txt  3.6.txt  3.7.txt  3.8.txt  4.1.txt  4.2.txt  4.3.txt  4.4.txt  4.5.txt  map.json
